# waternet

./: .gitignore  CLAUDE.md  EXECUTION_GUIDE.md  GUIDE.md  README.md  main.py  pyproject.toml  waternet_v2.ipynb
Escrita/: 1_introduction.tex  2_theoretical_concepts.tex  4_materials_and_methods.tex  6_schedule.tex  c_resumo.tex  dados_tcc.tex  tcc.cls  tcc.tex
Escrita/bibliography/: [over water] Laboratory Water Surface elevation estimation.bib  [pekel2016] 10.1038_nature20584-citation.ris  [survey] UAV sensor data applications with deep neural networks.bib  incomplete_referencias.bib  referencias.bib  referencias.txt
context/: SKILL.md  checklists.md  notebook_template.md  output_contract.md  runtime.md  waternet_implementation_plan.md
extracted_data/: topics.json
models/resnet50/: scaler_y.json  scaler_y.pkl  training_history.json
models/resnet50_fusion/: training_history.json
models/waternet/: train_loss.csv
models/waternet_v2/: training_history.json  waternet_v2 [no-fusion] log.txt
notebooks/: waternet_v2.training.ipynb  waternet_v2_evaluation.ipynb
past works/: [done] project_instructions_altitude_inference.md
src/: __init__.py  _requirements.txt  bagpy_parse.ipynb  deployment.py  img_utils.py  water_distance_estimation.py  waternet_grayscale.ipynb
writing/: 1_introduction.tex  2_theoretical_concepts.tex  3_related_works.tex  4_materials_and_methods.tex  5_results.tex  6_conclusion.tex  7_referencias.tex  INSERIR_NOS_ACHADOS_DOS_MATERIAIS_E_METODOS.md  [bu] 3_related_works.tex  c_resumo.tex  d_abstract.tex  e_abreviaturas.tex  tcc.cls  tcc.tex
(+69 files in other folders)
