[project]
name = "waternet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bagpy>=0.5",
    "cv-bridge>=1.13.0.post0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pylint>=4.0.4",
    "rosbags>=0.11.0",
]
