[project]
name = "waternet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.10.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pylint>=4.0.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tensorflow>=2.20.0",
]
