[project]
name = "waternet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.10.0",
    "keras>=3.13.2",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pydot>=4.0.1",
    "pylint>=4.0.4",
    "pyyaml>=6.0.0",
    "ruff>=0.15.8",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "shap>=0.43.0",
    "tensorflow>=2.14.0",
]
